--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <img src="./img/perfil.jpg" alt="Lobo Cinza" width="360" height="520">
     <div>
       <h1>Desenvolvedor<br>Front End &<br>UX/UI Designer</h1>
-      <p>Localizado em Curitiba</p>
+      <p>Localizado em Curitiba-PR</p>
     </div>
   </main>
 
