--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <div>
       <h1>Desenvolvedor<br>Front End &<br>UX/UI Designer</h1>
       <p>Localizado em Curitiba-PR</p>
+      <p> Apenas um Programador regional</p>
+      
     </div>
   </main>
 
